--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "jmsmart",
   "version": "1.0.0",
-  "description": "",
+  "description": "Node.js API Server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "NODE_ENV=development node index.js",
+    "prod": "NODE_ENV=production node index.js"
   },
   "repository": {
     "type": "git",
@@ -14,6 +16,20 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/yundididi/jmsmart/issues"
+  },
+  "dependencies": {
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "method-override": "^3.0.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.7",
+    "regex-email": "^1.0.2",
+    "winston": "^3.2.1",
+    "winston-daily-rotate-file": "^4.2.1"
   },
   "homepage": "https://github.com/yundididi/jmsmart#readme"
 }
